adding rest controller and h2 file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=ma
+spring.datasource.password=ma
+spring.datasource.driver-class=org.h2.Driver
