--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=ma
 spring.datasource.password=ma
 spring.datasource.driver-class=org.h2.Driver
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
